Fix issue with checkbox in thead being too big.

--- a/bootstrap-table.css
+++ b/bootstrap-table.css
@@ -196,7 +196,7 @@
 
 /* support bootstrap 3 */
 .table thead>tr>th {
-    padding: 0;
+    padding: 0 !important;
     margin: 0;
 }
 
